<resources>
    <string name="app_name">Login</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_profile">Profile</string>
<!--    <String name="nav_profile">Profile</String>-->

    <!--string for book -->
    <string name="title_activity_choose_car">ChooseCar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="a" />
    <string name="book">Book</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="hours">Hours</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="pickup_time">Pickup time</string>
    <string name="type_hours">Type Hours</string>
    <string name="days">Days</string>
    <string name="select_tyoe">Select Tyoe</string>
    <string name="type_days">Type Days</string>

    <string name="choose_date">Choose Date</string>
    <string name="confirm_rental">confirm Rental</string>
    <string name="textview">TextView</string>
    <string name="hour">Hours</string>
    <string name="rent_type">Rent Type</string>
    <string name="_6_40_am">6:40 AM</string>
    <string name="pickup_tim">Pickup Time</string>
    <string name="pickup_dat">Pickup Date</string>
    <string name="malabe">Malabe</string>
    <string name="car_details">Car Details</string>
    <string name="car_no_xxx_1234">Car No xxx-1234</string>
    <string name="booking_details">Booking Details</string>
    <string name="model_xxxxx">Model xxxxx</string>
    <string name="location_malabe">Location Malabe</string>
    <string name="payment_details">Payment Details</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="choose_time">Choose Time</string>
    <string name="next1">Next</string>
    <string name="button">Button</string>
    <string name="model_xxxx1">Model </string>
    <string name="location_xxxx1">Location xxxx</string>
    <string name="location_xxxx2">Location xxxx</string>
    <string name="model1">Model</string>
    <string name="todo1">TODO</string>
    <string name="model_xxxx2">Model xxxx</string>
    <string name="pick_a_car">Pick a Car</string>
    <string name="next2">Next</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="next">Next</string>
    <string name="amount_rs_2500_00">Amount Rs.2500.00</string>
    <string name="cuurent">Cuurent</string>
    <string name="Location">Location</string>
    <string name="pick">pick</string>
    <string name="btnBook1">Book</string>
    <string name="btnBook2">Book</string>
    <string name="btnBook3">Button</string>
    <string name="btnBook4">Button</string>
    <string name="type_location">Type Location</string>
    <string name="select_your_car">Select Your Car</string>
    <string name="b">b</string>
    <string name="string_c">string/c</string>
    <string name="string_d" />
    <string name="String_Car" />
    <string name="todo">TODO</string>
    <string name="brand">Brand</string>
    <string name="brandname">BrandName</string>
    <string name="location">Location</string>
    <string name="show_location">show_location</string>
    <string name="showDate" />
    <string name="showModel">Model</string>
    <string name="showBrand">Brand</string>
    <string name="btnShow">Show</string>
    <string name="car_bramd">Car Bramd</string>
    <string name="car_model">car Model</string>
    <string name="enter_days">Enter Days</string>

    <string name="calculate">Calculate</string>
    <string name="model">Model</string>
    <string name="enter_days1">Enter Days</string>
    <string name="total_amount">Total Amount</string>

    <!-- Notification String -->
    <string name="notificationtitle">FeedBack</string>
    <string name="notificationtext">Feedback send</string>
    <string name="notificationticker">Ticker</string>
    <string name="lbltitle">"Title: "</string>
    <string name="lbltext">"Text: "</string>
    <string name="notification">Notification</string>

</resources>
